website/versioned_docs/version-0.1.0/0_00_START_WELCOME.md
---
id: version-0.1.0-simpletoken
title: OST | Simple Token
sidebar_label: Simple Token
original_id: simpletoken
---

OST stands for "Open Simple Token". OST aims to be the blockchain technology partner of choice for businesses of all sizes and levels of technical sophistication, enabling any business to create, launch, and manage their own branded digital token economy powered by OpenST protocols and OST blockchain management software. Our signature product, [<u>OST KIT⍺</u>](https://kit.ost.com), enables you to launch your own Branded Tokens backed by OST⍺ (also referred to as "$OST⍺").

OST KIT⍺ is built on the OpenST protocol. The OpenST protocol allows for the staking of $OST⍺ on Ropsten Ethereum against minting branded tokens on the OpenST network of side blockchains. You can learn more about the OpenST Protocol [<u>here</u>](https://openst.org).

OST KIT⍺ provides you with tools for designing, planning, minting, and managing your branded token economy. With our recent release of OST KIT⍺, along with other features, developers will be able to do the following with APIs: 

* [<u>Setup transaction types</u>](2_06_API_TRANSACTION-TYPES_CREATE.md) for your Branded Token that are user-to-user, company-to-user, and user-to-company
* [<u>Define transactions in fiat value</u>](2_06_API_TRANSACTION-TYPES_CREATE.md) that use an OST Price Oracle to automatically adjust the price of your Branded Token
* [<u>Enable your company to collect fees</u>](2_06_API_TRANSACTION-TYPES_CREATE.md) for certain transactions
* [<u>Create Users</u>](2_01_API_USERS_CREATE.md) 
* [<u>Airdrop</u>](2_04_API_AIRDROP_DROP.md) Branded Tokens to selected users
* [<u>Execute transactions</u>](2_09_API_TRANSACTION-TYPES_EXECUTE.md) 

## Quick Start Guide

To get started quickly, try the [<u>Ruby SDK Quick Start Guide</u>](3_01_SDK_RUBY.md) or the [<u>JavaScript SDK Quick Start Guide</u>](3_02_SDK_JAVASCRIPT.md).

## Latest Version of API Documentation

To get to the documentation of the lastest version, see [<u>OST API v1 Documentation</u>](https://dev.ost.com/docs/simpletoken.html)
