website/versioned_docs/version-1.0.0/0_00_START_WELCOME.md
---
id: version-1.0.0-simpletoken
title: OST | Simple Token
sidebar_label: Simple Token
original_id: simpletoken
---

OST stands for "Open Simple Token". OST aims to be the blockchain technology partner of choice for businesses of all sizes and levels of technical sophistication, enabling any business to create, launch, and manage their own branded digital token economy powered by OpenST protocols and OST blockchain management software. Our signature product, [<u>OST KIT⍺</u>](https://kit.ost.com), enables you to launch your own Branded Tokens backed by OST⍺ (also referred to as "$OST⍺").

OST KIT⍺ is built on the OpenST protocol. The OpenST protocol allows for the staking of $OST⍺ on Ropsten Ethereum that enables Branded Tokens to be created, or "minted" on the OpenST network of sidechains. You can learn more about the OpenST Protocol [<u>here</u>](https://openst.org).

OST KIT⍺ provides you with tools for designing, planning, minting, and managing your branded token economy. With our recent release of OST KIT⍺, along with other features, developers will be able to do the following with APIs: 

* [<u>Setup Actions</u>](/docs/api_actions_create.html) for your Branded Token that are user-to-user, company-to-user, and user-to-company
* [<u>Define amount for actions in fiat value</u>](/docs/api_actions_create.html) that use an OST Price Oracle to automatically adjust the price of your Branded Token
* [<u>Enable your company to collect fees</u>](/docs/api_actions_create.html) for certain transactions
* [<u>Create Users</u>](/docs/api_users_create.html) 
* [<u>Airdrop</u>](/docs/api_airdrop_execute.html) Branded Tokens to selected users
* [<u>Execute Actions</u>](/docs/api_action_execute.html)
* [<u>Transfer Funds</u>](/docs/api_transfers_create.html) to an account outside of your branded token economy. This enables you to deploy contracts on the OpenST network of side blockchains.
* [<u>Get Token Details</u>](/docs/api_token.html) about the Branded Token you created for your token economy.


## Quick Start Guide

To get started quickly, try the [<u>Ruby SDK Quick Start Guide</u>](/docs/sdk_ruby.html) or the [<u>JavaScript SDK Quick Start Guide</u>](/docs/sdk_javascript.html).


## Previous Version of API Documentation

To get to the documentation of the previous version, see [<u>OST API v0 Documentation</u>](https://dev.ost.com/docs/0.9.1/simpletoken.html)


>_last updated 17th May 2018_; for support see [help.ost.com](https://help.ost.com/support/home)
>
> OST KIT⍺ sandboxapi v1 | OpenST Platform v0.9.2

